k8s/frontend-blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-blue

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: blue

  template:
    metadata:
      labels:
        app: frontend
        version: blue

    spec:
      containers:
        - name: frontend-blue-container
          image: soumik5/frontend-blue:version1

          ports:
            - containerPort: 3100

          readinessProbe:
            httpGet:
              path: /
              port: 3100
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3100
            initialDelaySeconds: 20
            periodSeconds: 20
