k8s/frontend-green-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-green

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend
      version: green

  template:
    metadata:
      labels:
        app: frontend
        version: green

    spec:
      containers:
        - name: frontend-green-container
          image: soumik5/frontend-green:version1

          ports:
            - containerPort: 3200

          readinessProbe:
            httpGet:
              path: /
              port: 3200
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 3200
            initialDelaySeconds: 20
            periodSeconds: 20
