k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service

spec:
  type: NodePort

  selector:
    app: frontend
    version: blue

  ports:
    - port: 80
      targetPort: 3100
      protocol: TCP
